tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_12.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := ((+ ((z * 0) + (- z))) * (((1 + z) - (y DIV 2)) - ((0 + y) MOD (z - 2))));
               z := (- (((1 DIV 1223) + (200 MOD 0)) + ((y - x) + (z * 0))));
               z := ((((- 200) MOD (0 + z)) MOD (- (1223 + 2))) + (- ((2 MOD x) - (y DIV 0))));
               p := ((((z * 200) MOD (200 - 0)) * ((1223 + 200) * (x - 2))) = ((- (- 0)) + (+ (1223 + z))));
               z := ((((200 DIV y) DIV (0 MOD 0)) * ((x DIV 0) + (y * 200))) * (((2 - 1) * (- 1)) + ((+ 1) MOD (1 MOD 1223))));
  (* error *)  p := ((((- r) DIV (- 200)) >= ((0 + 1223) MOD (2 MOD 0))) OR (~ ((0 <= 1) OR (~ r))));
               p := ((((- 1223) >= (1223 * 2)) & ((1 * z) > (+ 1))) OR (((0 DIV 200) MOD (y - 1)) # ((y + z) MOD (y DIV 1223))));
               r := ((+ (+ (0 + 2))) = (((+ 1) * (y MOD x)) - ((x - 2) - (z MOD y))));
               q := ((- ((- x) * (1223 * x))) <= (((200 DIV 1) * (1 * 200)) MOD (+ (x * 1223))));
               y := ((((2 * z) MOD (0 * z)) * ((2 - 2) DIV (z * 2))) + (((2 - z) - (- z)) MOD ((200 DIV z) DIV (+ z))))
END Test16.